# vex

./: .gitignore  Cargo.toml  PRD.md  README.md
.claude/: settings.json
.claude/commands/: harness-check.md  harness-do.md  harness-plan.md
src/: app.rs  main.rs
src/config/: mod.rs
src/fs/: mod.rs  ops.rs  watcher.rs
src/git/: mod.rs
src/preview/: code.rs  csv.rs  highlight.rs  image.rs  markdown.rs  mod.rs  parquet.rs
src/state/: git.rs  mod.rs
src/ui/: file_list.rs  file_manager.rs  git.rs  hint_bar.rs  layout.rs  mod.rs  status_bar.rs  viewer.rs
